--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+server:
+  port: 3000
+simple:
+  message: ${MESSAGE}
 spring:
   datasource:
     url: jdbc:h2:mem:jpademo
@@ -5,5 +9,3 @@ spring:
     console:
       enabled: true
       path: /h2
-simple:
-  message: ${MESSAGE}
